force-app/main/default/objects/Pool__c/Pool__c.object-meta.xml
<CustomObject>
    <label>Pool</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Pool ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>