force-app/main/default/objects/Pool__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <label>Commission Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>