force-app/main/default/objects/Pool__c/fields/Pending_Recall__c.field-meta.xml
<CustomField>
    <fullName>Pending_Recall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pending Recall Flag to check that pool&apos;s product is set to pending recall</description>
    <inlineHelpText>Pending Recall Flag to check that pool&apos;s product is set to pending recall</inlineHelpText>
    <label>Pending Recall</label>
    <type>Checkbox</type>
</CustomField>