force-app/main/default/objects/Pool__c/fields/Placement_Agency__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency__c</fullName>
    <description>Placement Agency</description>
    <inlineHelpText>Placement Agency</inlineHelpText>
    <label>Agency ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>