force-app/main/default/objects/Pool__c/fields/Placement_agency_lookup__c.field-meta.xml
<CustomField>
    <fullName>Placement_agency_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>placement agency lookup field</description>
    <label>Agency ID</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Pools</relationshipLabel>
    <relationshipName>Pools</relationshipName>
    <type>Lookup</type>
</CustomField>