force-app/main/default/objects/Pool__c/fields/Placepool_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Accounts__c</fullName>
    <description>This field is used to show count of Products present in Pool</description>
    <label>Placepool Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>