force-app/main/default/objects/Pool__c/fields/Placepool_Active__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Placepool Active</description>
    <label>Placepool Active</label>
    <type>Checkbox</type>
</CustomField>