force-app/main/default/objects/Pool__c/fields/Placepool_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Bonus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Placepool Bonus</description>
    <label>Placepool Bonus</label>
    <type>Checkbox</type>
</CustomField>