force-app/main/default/objects/Pool__c/fields/Placepool_Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Bonus_Amount__c</fullName>
    <description>Placepool Bonus Amount</description>
    <label>Placepool Bonus Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>