force-app/main/default/objects/Pool__c/fields/Placepool_Bonus_Finance_Id__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Bonus_Finance_Id__c</fullName>
    <description>Placepool Bonus Finance Id</description>
    <label>Placepool Bonus Finance ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>