force-app/main/default/objects/Pool__c/fields/Placepool_Bonus_Length__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Bonus_Length__c</fullName>
    <description>Placepool Bonus Length</description>
    <label>Placepool Bonus Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>