force-app/main/default/objects/Pool__c/fields/Placepool_Bonus_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Bonus_Triggered__c</fullName>
    <description>Placepool Bonus Triggered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Placepool Bonus Triggered</label>
    <type>DateTime</type>
</CustomField>