force-app/main/default/objects/Pool__c/fields/Placepool_End__c.field-meta.xml
<CustomField>
    <fullName>Placepool_End__c</fullName>
    <description>Placepool End</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Placepool End</label>
    <type>Date</type>
</CustomField>