force-app/main/default/objects/Pool__c/fields/Placepool_End_Notify__c.field-meta.xml
<CustomField>
    <fullName>Placepool_End_Notify__c</fullName>
    <description>Placepool End Notify</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Placepool End Notify</label>
    <type>DateTime</type>
</CustomField>