force-app/main/default/objects/Pool__c/fields/Placepool_Facevalue__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Facevalue__c</fullName>
    <description>Placepool Facevalue
This field is used to show total current balance of product</description>
    <label>Placepool Facevalue</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>