force-app/main/default/objects/Pool__c/fields/Placepool_Review__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Placepool Review</description>
    <label>Placepool Review</label>
    <type>Checkbox</type>
</CustomField>