force-app/main/default/objects/Pool__c/fields/Placepool_Review_Length__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Review_Length__c</fullName>
    <description>Placepool Review Length</description>
    <label>Placepool Review Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>