force-app/main/default/objects/Pool__c/fields/Placepool_Review_Rate__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Review_Rate__c</fullName>
    <description>Placepool Review Rate</description>
    <label>Placepool Review Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>