force-app/main/default/objects/Pool__c/fields/placepool_review_rate_actual__c.field-meta.xml
<CustomField>
    <fullName>placepool_review_rate_actual__c</fullName>
    <description>Placepool Review Rate Actual</description>
    <label>Placepool Review Rate Actual</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>