force-app/main/default/objects/Pool__c/fields/Placepool_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Reviewed__c</fullName>
    <description>Placepool Reviewed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Placepool Reviewed</label>
    <type>DateTime</type>
</CustomField>