force-app/main/default/objects/Pool__c/fields/Placepool_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Placepool_Settlement__c</fullName>
    <description>Placepool Settlement</description>
    <label>Placepool Settlement</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>