force-app/main/default/objects/Pool__c/fields/Pool_Description__c.field-meta.xml
<CustomField>
    <fullName>Pool_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pool Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>