force-app/main/default/objects/Pool__c/fields/Pool_ID__c.field-meta.xml
<CustomField>
    <fullName>Pool_ID__c</fullName>
    <formula>IF( NOT(ISNULL(Pool_Number__c)),TEXT(Pool_Number__c) , Name )</formula>
    <label>Pool ID</label>
    <type>Text</type>
</CustomField>