force-app/main/default/objects/Pool__c/fields/Pool_Number__c.field-meta.xml
<CustomField>
    <fullName>Pool_Number__c</fullName>
    <label>Pool Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>