force-app/main/default/objects/Pool__c/fields/Poolperiod_Id__c.field-meta.xml
<CustomField>
    <fullName>Poolperiod_Id__c</fullName>
    <description>Poolperiod Id</description>
    <label>Poolperiod ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>