force-app/main/default/objects/Pool__c/listViews/All_Pool_Records.listView-meta.xml
<ListView>
    <fullName>All_Pool_Records</fullName>
    <columns>NAME</columns>
    <columns>Placement_Agency_Name__c</columns>
    <columns>Placement_agency_lookup__c</columns>
    <columns>Commission_Rate__c</columns>
    <columns>Placepool_Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Pool Records</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>